provision-cluster/unused-nginx/nginx.service.ingress-ts.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress-ts
  namespace: ingress-nginx
  annotations:
    tailscale.com/expose: "true"
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 443
      targetPort: 443
  selector:
    app.kubernetes.io/instance: ingress-nginx
