provision-cluster/unused-nginx/nginx-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    tailscale.com/funnel: "true"
spec:
  defaultBackend:
    service:
      name: ingress-nginx-controller
      port:
        name: https
  ingressClassName: tailscale
  tls:
    - hosts:
        - nginx
